<resources>
    <string name="app_name">CCManager</string>
    <string name="installment">Installments</string>

    <string name="cc_balance">Balance: %1$d</string>

    <string name="title_activity_cc_manager">Credit Card Manager</string>
    <string name="title_cc_add_transaction">Add Transaction</string>
    <string name="title_cc_add_installment">Add Installment</string>

    <string name="tr_cc_id">Id</string>
    <string name="tr_cc_date">Date</string>
    <string name="tr_cc_transaction">Transaction</string>
    <string name="tr_cc_description">Description</string>
    <string name="tr_cc_amount">Amount</string>

    <string name="page_of">Page %1$d of %2$d</string>

    <string name="btn_cc_add">Add</string>
    <string name="btn_prev">Prev</string>
    <string name="btn_next">Next</string>
    <string name="btn_installment">INSTALLMENT <![CDATA[>>]]></string>
    <string name="btn_back">Back</string>
    <string name="btn_download">DOWNLOAD</string>

    <!-- Transaction Add Dialog -->
    <string name="prompt_cc_tranDate">Date</string>
    <string name="prompt_cc_tranType">Type</string>
    <string name="prompt_cc_tranDescription">Description</string>
    <string name="prompt_cc_tranAmount">Amount</string>
    <string name="prompt_cc_principal_amount">Principal Amount</string>
    <string name="prompt_cc_monthly_amortization">Monthly Amortization</string>
    <string name="prompt_cc_months_to_pay">Months To Pay</string>
    <string name="prompt_cc_end_date">End Date</string>
    <string name="prompt_cc_payment_type">Payment Type</string>
    <string name="prompt_cc_include">Include?</string>
    <string name="cancel">Cancel</string>

    <string name="action_compute">Compute</string>

    <string-array name="arr_cc_transaction">
        <item>CREDIT</item>
        <item>INSTALLMENT</item>
        <item>CHARGE</item>
        <item>PAYMENT</item>
    </string-array>

    <string-array name="arr_cc_payment">
        <item>CBC_Internet_Payment</item>
        <item>SM_Bills_Payment</item>
        <item>ChinaBank</item>
        <item>Others</item>
    </string-array>

    <string-array name="arr_cc_desc">
        <item>Grocery - Eton</item>
        <item>Grocery - Ever</item>
        <item>Mercury Drug - Trinoma</item>
        <item>Mercury Drug - Ayala</item>
        <item>Mercury Drug - G4</item>
    </string-array>

    <string-array name="arr_cc_operation">
        <item>ADD</item>
        <item>DELETE</item>
        <item>EXPORT</item>
    </string-array>
</resources>
