<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".activity.MainActivity">

    <RelativeLayout
        android:id="@+id/lyt_balance"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/tv_cc_balance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/cc_balance"
            android:layout_alignParentLeft="true"/>
        <Button
            android:id="@+id/btn_add_tran"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_cc_add"
            android:textStyle="bold"
            android:layout_alignParentRight="true"/>
    </RelativeLayout>

    <!-- Main Table -->
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/lyt_balance">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TableLayout
                android:id="@+id/tbl_cc_main"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <TableRow
                    android:id="@+id/tr_cc_tranHeader"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/cc_tblTran">
                    <!-- Date -->
                    <TextView
                        android:id="@+id/tv_cc_tranRow"
                        android:layout_width="wrap_content"
                        android:layout_height="@dimen/cc_tran_row_height"
                        android:layout_weight="1"
                        android:gravity="center_horizontal"
                        android:paddingRight="10dp"
                        android:text="@string/tr_cc_date"
                        android:typeface="normal"
                        android:textStyle="bold|italic"
                        android:textColor="@android:color/black"
                        android:fontFamily="sans-serif-medium"/>
                    <!-- Transaction -->
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="@dimen/cc_tran_row_height"
                        android:layout_weight="1"
                        android:gravity="center_horizontal"
                        android:paddingRight="10dp"
                        android:text="@string/tr_cc_transaction"
                        android:typeface="normal"
                        android:textStyle="bold|italic"
                        android:textColor="@android:color/black"
                        android:fontFamily="sans-serif-medium"/>
                    <!-- Description -->
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="@dimen/cc_tran_row_height"
                        android:layout_weight="1"
                        android:gravity="center_horizontal"
                        android:paddingRight="10dp"
                        android:text="@string/tr_cc_description"
                        android:typeface="normal"
                        android:textStyle="bold|italic"
                        android:textColor="@android:color/black"
                        android:fontFamily="sans-serif-medium"/>
                    <!-- Amount -->
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="@dimen/cc_tran_row_height"
                        android:layout_weight="1"
                        android:gravity="center_horizontal"
                        android:text="@string/tr_cc_amount"
                        android:typeface="normal"
                        android:textStyle="bold|italic"
                        android:textColor="@android:color/black"
                        android:fontFamily="sans-serif-medium"/>
                </TableRow>
            </TableLayout>
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/cc_tblTran">
                <TextView
                    android:id="@+id/tv_cc_tranPageCount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginLeft="20dp"
                    android:textStyle="bold|italic"
                    android:fontFamily="sans-serif-medium"
                    android:textColor="@android:color/black"/>
                <Button
                    android:id="@+id/btn_previous"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginRight="2dp"
                    android:text="@string/btn_prev"
                    android:textStyle="bold"
                    style="?android:attr/buttonStyleSmall"/>
                <Button
                    android:id="@+id/btn_next"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginLeft="2dp"
                    android:layout_marginRight="10dp"
                    android:text="@string/btn_next"
                    android:textStyle="bold"
                    style="?android:attr/buttonStyleSmall" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:gravity="right">
        <Button
            android:id="@+id/btn_installment"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/btn_installment"/>
    </LinearLayout>

</RelativeLayout>
